--- a/UMessaGe/app/src/main/AndroidManifest.xml
+++ b/UMessaGe/app/src/main/AndroidManifest.xml
@@ -13,11 +13,7 @@
         android:theme="@style/Theme.UMessaGe"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".IniciarSesionActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UMessaGe">
